Added build options for Win32 and Unix in Code::Blocks project file in ZCpu subsystem. Also fixed a bug in ZOpcodeImpl::SHOW_STATUS and also made a quick workaround in ZOpcodeImpl::READ for Win32 build, making the status line show up similar to the way it does in dumb-frotz

--- a/zcpu/zcpu/zcpu.cbp
+++ b/zcpu/zcpu/zcpu.cbp
@@ -7,8 +7,8 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin\Debug\zcpu" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Debug\" />
+				<Option output="bin/Debug/zcpu" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -16,8 +16,8 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin\Release\zcpu" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Release\" />
+				<Option output="bin/Release/zcpu" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -32,10 +32,29 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="..\..\num2ascii\num2ascii\num2ascii.c">
+		<Linker>
+		</Linker>
+		<Unit filename="../../num2ascii/num2ascii/num2ascii.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\num2ascii\num2ascii\num2ascii.h" />
+		<Unit filename="../../num2ascii/num2ascii/num2ascii.h" />
+		<Unit filename="../../zdictionary/zdictionary/zdictionary.cpp" />
+		<Unit filename="../../zdictionary/zdictionary/zdictionary.h" />
+		<Unit filename="../../zerror/zerror/zerror.cpp" />
+		<Unit filename="../../zerror/zerror/zerror.h" />
+		<Unit filename="../../zglobal/zglobal.cpp" />
+		<Unit filename="../../zglobal/zglobal.h" />
+		<Unit filename="../../zglobal/zglobaldefines.h" />
+		<Unit filename="../../zinout/zinout/zinout.cpp" />
+		<Unit filename="../../zinout/zinout/zinout.h" />
+		<Unit filename="../../zmemory/zmemory/zmemory.cpp" />
+		<Unit filename="../../zmemory/zmemory/zmemory.h" />
+		<Unit filename="../../zmemory/zmemory/zobject.cpp" />
+		<Unit filename="../../zmemory/zmemory/zobject.h" />
+		<Unit filename="../../zstack/zstack/zstack.cpp" />
+		<Unit filename="../../zstack/zstack/zstack.h" />
+		<Unit filename="../../ztext/ztext/ztext.cpp" />
+		<Unit filename="../../ztext/ztext/ztext.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="zcpu.cpp" />
 		<Unit filename="zcpu.h" />
@@ -43,23 +62,6 @@
 		<Unit filename="zopcode.h" />
 		<Unit filename="zopcode_impl.cpp" />
 		<Unit filename="zopcode_impl.h" />
-		<Unit filename="..\..\zdictionary\zdictionary\zdictionary.cpp" />
-		<Unit filename="..\..\zdictionary\zdictionary\zdictionary.h" />
-		<Unit filename="..\..\zerror\zerror\zerror.cpp" />
-		<Unit filename="..\..\zerror\zerror\zerror.h" />
-		<Unit filename="..\..\zglobal\zglobal.cpp" />
-		<Unit filename="..\..\zglobal\zglobal.h" />
-		<Unit filename="..\..\zglobal\zglobaldefines.h" />
-		<Unit filename="..\..\zinout\zinout\zinout.cpp" />
-		<Unit filename="..\..\zinout\zinout\zinout.h" />
-		<Unit filename="..\..\zmemory\zmemory\zmemory.cpp" />
-		<Unit filename="..\..\zmemory\zmemory\zmemory.h" />
-		<Unit filename="..\..\zmemory\zmemory\zobject.cpp" />
-		<Unit filename="..\..\zmemory\zmemory\zobject.h" />
-		<Unit filename="..\..\zstack\zstack\zstack.cpp" />
-		<Unit filename="..\..\zstack\zstack\zstack.h" />
-		<Unit filename="..\..\ztext\ztext\ztext.cpp" />
-		<Unit filename="..\..\ztext\ztext\ztext.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
